--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2271,3 +2271,11 @@ button,
     border-top: 0;
     margin-top: 0;
     padding-top: 0; }
+
+
+.icra_image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
