--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2137,7 +2137,9 @@ button,
     flex-shrink: 0;
     display: block;
     margin: 0 0 2em 4em;
-    width: 50%; }
+    width: 45%; 
+    height: 45%;
+  }
     #banner .image img {
       height: 100%;
       -moz-object-fit: cover;
